Changing the content on the landing page and adding a flooding details page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* 
+colours used:
+#39c088 - green
+#e44c65 - pinky red
+*/
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -111,12 +117,12 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e44c65;
+		color: #39c088;
 		text-decoration: none;
 	}
 
 		a:hover {
-			color: #e44c65 !important;
+			color: #39c088 !important;
 			border-bottom-color: transparent;
 		}
 
@@ -129,8 +135,10 @@ input, select, textarea {
 		font-style: italic;
 	}
 
+	/* AW: this was 2em */
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 1em 0; 
+		font-size: 14pt;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -145,6 +153,12 @@ input, select, textarea {
 			border: 0;
 		}
 
+	h1 {
+		font-size: 4em;
+		font-weight: 900;
+		line-height: 1.5em;
+		letter-spacing: -0.025em;
+	}
 	h2 {
 		font-size: 2em;
 		line-height: 1.5em;
@@ -2186,7 +2200,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #39c088;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2250,12 +2264,13 @@ input, select, textarea {
 			box-shadow: none;
 		}
 
+		/* #e44c65 */
 		input[type="text"]:focus,
 		input[type="password"]:focus,
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e44c65;
+			border-color: #39c088;
 		}
 
 	select {
@@ -2358,7 +2373,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e44c65;
+			border-color: #39c088;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2855,8 +2870,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		.button:hover,
 		.button:active {
-			box-shadow: inset 0 0 0 1px #e44c65;
-			color: #e44c65 !important;
+			box-shadow: inset 0 0 0 1px #39c088;
+			color: #39c088 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2898,7 +2913,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e44c65;
+			background-color: #39c088;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -3138,13 +3153,13 @@ input, select, textarea {
 			right: 0;
 		}
 
-		.spotlight.style1 .content {
+		/* .spotlight.style1 .content {
 			border-color: #e44c65;
 		}
 
 		.spotlight.style2 .content {
 			border-color: #5480f1;
-		}
+		} */
 
 		.spotlight.style3 .content {
 			border-color: #39c088;
@@ -3201,7 +3216,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #39c088;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3236,7 +3251,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #39c088 !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3340,7 +3355,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #e44c65;
+				color: #39c088;
 			}
 
 		.dropotron.level-0 {
@@ -3430,7 +3445,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #39c088;
 					}
 
 					#header nav ul li > ul {
@@ -3471,6 +3486,7 @@ input, select, textarea {
 			width: 1%;
 		}
 
+		/* main title styling */
 		#banner:after {
 			background-image: -moz-linear-gradient(top, #086e31f2, #086e31f2), url("images/overlay.png");;
 			background-image: -webkit-linear-gradient(top,  #086e31f2, #086e31f2), url("images/overlay.png");;
@@ -3483,6 +3499,7 @@ input, select, textarea {
 			position: absolute;
 			top: 0;
 			width: 100%;
+			opacity: 0.4;
 		}
 
 		#banner .content {
@@ -3674,8 +3691,9 @@ input, select, textarea {
 					overflow: hidden;
 				}
 
+				/* #1c1d26 */
 				.spotlight .content {
-					background-color: #1c1d26;
+					background-color: #1c1d26; 
 					border-width: 0 !important;
 					border-top-width: 0.35em !important;
 					bottom: auto !important;
@@ -3683,7 +3701,7 @@ input, select, textarea {
 					padding: 4.5em 2.5em 2.5em 2.5em !important;
 					position: relative;
 					right: auto !important;
-					text-align: center;
+					/* text-align: center; */
 					top: auto !important;
 					width: 100% !important;
 				}
@@ -3931,9 +3949,9 @@ input, select, textarea {
 						font-family: 'Font Awesome 5 Free';
 						font-weight: 900;
 					}
-
+/* THIS IS THE TITLE BAR HAMBURGER MENU */
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #39c088;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
